style.css
body {
  background-image: url("bg.png");
}

h1, li, h4, p {
  font-family: 'Bangers', cursive;
}

li {
  font-size:25px;
}

#intro {
  text-align: center;
  list-style-position: inside;
}

.top {
  height: 100px;
  padding: 30px;
  color:white;
}
.top a{
  color: white;
}

@supports (-webkit-text-stroke: 1px black) {
  .top a:hover {
    -webkit-text-stroke: 1px white;
    -webkit-text-fill-color: white;
  }
}

.container {
  margin: 0 auto;
  border:4px solid purple;
  border-radius:10px;
  padding: 30px;
  width:500px;
}

#buttonContainer {
  margin: 0 auto;
  text-align: center;
}

#startQuiz{
  font-size:25px;
}
#quiz button {
  display: block;
  font-size:22px;
}
button {
  color: white;
  background: purple;
  padding-left: 20px;
  padding-right: 20px;
}

.hidden {
  display: none;
}

#initialSubmit {
  margin: 0 auto;
}

.green {
  color: green;
}

.red {
  color:red;
}

@media only screen and (max-width: 500px) {
  .container {
    Width: 95%;
  }
}

